force-app/main/default/objects/Customer_Payment_Schedule__c/Customer_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>Per-booking payment schedule generated from cost sheet lines</description>
    <label>Customer Payment Schedule</label>
    <nameField>
        <label>Customer Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>