force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>Updated by Receipt Line Item trigger</description>
    <label>Amount Received</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>