force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Demand_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Demand_Due_Date__c</fullName>
    <label>Demand Due Date</label>
    <type>Date</type>
</CustomField>