force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Interest_Waived__c.field-meta.xml
<CustomField>
    <fullName>Interest_Waived__c</fullName>
    <label>Interest Waived</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>