force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Is_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Is_Demanded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Demanded</label>
    <type>Checkbox</type>
</CustomField>