force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Milestone_Category__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Category__c</fullName>
    <label>Milestone Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Possession</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>