force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Milestone_Pct__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Pct__c</fullName>
    <label>Milestone %</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>