force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <formula>Scheduled_Amount__c - Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>