force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Payment Milestone</label>
    <referenceTo>Payment_Milestone__c</referenceTo>
    <relationshipLabel>Customer Payment Schedules</relationshipLabel>
    <relationshipName>Customer_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>