force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Scheduled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Amount__c</fullName>
    <label>Scheduled Amount</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>