force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Customer Payment Schedules</relationshipLabel>
    <relationshipName>Customer_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>