force-app/main/default/objects/Customer_Payment_Schedule__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Customer Payment Schedules</relationshipLabel>
    <relationshipName>Customer_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>